plugins {
    id 'java'
    id 'application'
}

group = 'com'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.ModuleExporter'
}

repositories {
    mavenCentral()
    maven {
        url 'https://maven.scijava.org/content/groups/public'
    }
}


dependencies {
    implementation 'net.imagej:ij1-patcher:1.2.7'
    implementation("org.jetbrains.bio:npy:0.3.5") // Forcing a newer version of npy (deepimagej wants 0.3.5)
    implementation("io.github.mianalysis:mia-plugin:1.7.18")
}

tasks.named('run') {
    doFirst {
        jvmArgs = [
           '--add-opens=java.base/java.lang=ALL-UNNAMED',
           '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED',
        ]
    }
}
